Apply global top margin for mobile to fix layout shift under sticky navbar

--- a/client/src/components/ChatBox/ChatBox.css
+++ b/client/src/components/ChatBox/ChatBox.css
@@ -66,10 +66,3 @@
         display: none !important;
     }
 }
-
-@media (pointer: coarse) {
-  .box {
-    height: calc(100vh - 140px) !important;
-    margin-top: 56px;
-  }
-}
