--- a/client/src/components/ChatTabs/ChatTabs.css
+++ b/client/src/components/ChatTabs/ChatTabs.css
@@ -124,3 +124,10 @@
 .list-group-item.active:hover {
     background-color: rgb(0, 0, 0, 0.03) !important;
 }
+
+@media (pointer: coarse) {
+  .tabs {
+    margin-top: 56px !important;
+    height: calc(100vh - 130px) !important;
+  }
+}
